[package]
name = "wow"
version = "0.1.0"
edition = "2024"


[dependencies]
derive_builder = "0.20.2"
getset = "0.1.5"
gtk4 = "0.9.6"
gtk4-layer-shell = "0.5.0"
rsc = "3.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_path_to_error = "0.1.17"
serde_yaml = "0.9.33"
tokio = { version = "1.45.0", features = ["full"] }
