[package]
name = "wow"
version = "0.1.0"
edition = "2024"

[workspace]
members = [ "wow-actions","wow-app", "wow-common", "wow-context", "wow-derive", "wow-states", "wow-text-display", "wow-utils", "wow-widgets", "wow-windows"]

[workspace.dependencies]
gtk4 = "0.9.6"
chrono = "0.4.41"
async-channel = "2.3.1"
gtk4-layer-shell = "0.5.0"
serde_yaml = "0.9.34+deprecated"
serde = { version = "1.0.219", features = ["derive"] }
dirs = "6.0.0"
