[package]
name = "wow"
version = "0.1.0"
edition = "2024"

[workspace]
members = [ "wow-cli",
    "wow-core",
    "wow-derive",
    "wow-utils",
]

[dependencies]
wow-core = { path = "wow-core" }
log4rs = { workspace = true }
log = "0.4.27"

[workspace.dependencies]
gtk4 = "0.9.6"
chrono = "0.4.41"
async-channel = "2.3.1"
gtk4-layer-shell = "0.5.0"
serde_yaml = "0.9.34+deprecated"
serde = { version = "1.0.219", features = ["derive"] }
dirs = "6.0.0"
log = "0.4.27"
env_logger = "0.11.8"
log4rs = "1.4.0-rc1"
